Fix spacing css in search_page

--- a/src/stylesheets/nav_box.css
+++ b/src/stylesheets/nav_box.css
@@ -5,14 +5,13 @@
     display: flex;
     flex-direction: column;
     background: linear-gradient(45deg, rgb(25, 141, 236), rgb(224, 224, 255));    
-    text-align: right;
     border-radius: 15px;
 }
 
 #nav_box ul {
     margin: 0px;
     padding: 0px;
-    text-align: center;
+    text-align: right;
 }
 
 #nav_box li {
@@ -30,4 +29,17 @@
 
 #nav_box li:last-child:hover {
     border-radius: 0px 0px 15px 15px;
+}
+
+#nav_box img {
+    position: relative;
+    box-sizing: border-box;
+    top: 3px;
+    margin: 0px 5px 0px 10px;
+    height: 20px;
+    width: 20px;
+}
+
+#nav_box li:last-child img {
+    padding: 0px 2px;
 }
